<resources>
    <string name="app_name">Shikshana-E-Kshana</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="login1">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_emails">Enter Email</string>
    <string name="enter_names">Enter Name</string>
    <string name="a">notes</string>
    <string name="b">Sample p</string>
    <string name="c">Textbook</string>
    <string name="sign_ups">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_passwords">Enter Password</string>
    <string name="english">English</string>
    <string name="history">Hindi</string>
    <string name="geography">Social</string>
    <string name="math">Math</string>
    <string name="hindi">Hindi</string>
    <string name="social">Social</string>
    <string name="kannada">Kannada</string>
    <string name="mathematics">Mathematics</string>
    <string name="science">Science</string>
    <string name="enter_class">Enter Class</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="save">Save</string>
    <string name="class_10">Class 10</string>
    <string name="class_5">Class 5</string>
    <string name="class_6">Class 6</string>
    <string name="class_7">Class 7</string>
    <string name="class_8">Class 8</string>
    <string name="class_9">Class 9</string>
    <string name="kannada_1">Kannada</string>
    <string name="save_profile">Save Profile</string>
    <string name="enter_standard">Enter Standard</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_name1">Enter Name</string>
    <string name="todo">TODO</string>
    <string name="select_image">Select Image</string>
    <string name="app_logo">App logo</string>
    <string name="ask_ai_vedh">Ask AI Vedh!</string>
    <string name="ask_questions_here">Ask Questions Here</string>
    <string name="bottom_left_image">Bottom Left Image</string>
    <string name="user_profile">user_profile</string>
</resources>