<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:layout_gravity="center" />

    <!-- Name -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_names"
        android:inputType="text"
        android:minHeight="48dp" />

    <!-- Email -->
    <EditText
        android:id="@+id/signupEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_emails"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <!-- Password -->
    <EditText
        android:id="@+id/signupPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_passwords"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <!-- Signup Button -->
    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_ups" />

    <!-- Already have an account -->
    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_blue_dark"/>
</LinearLayout>
