<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radient_bg"
    tools:context=".DetailActivity"
    android:padding="20dp">

    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <!-- Circular Profile Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        tools:ignore="ImageContrastCheck" />

    <!-- Select Image Button -->
    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Name Field -->
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_name1"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/selectImageButton" />

    <!-- Class Field -->
    <EditText
        android:id="@+id/etClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_standard"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <!-- Description Field -->
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_description"
        android:inputType="text"
        android:minHeight="48dp"
        android:minLines="3"
        app:layout_constraintTop_toBottomOf="@id/etClass" />

    <!-- Save Button -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>
