<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/radient_bg"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="130dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@color/grey"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/classEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@color/grey"
        android:hint="@string/enter_class"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/mobileEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@color/grey"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>